# ijkplayer

./: .gitignore  NEWS.md  README.md  version.sh
.github/workflows/: android.yml  apple.yml  ios-android.yml  ios.yml
android/: build-aar.sh  install-ffmpeg.sh
android/ijkplayer/: build.gradle  gradle.properties  settings.gradle
android/ijkplayer/ijkplayer-cmake/: build.gradle
android/ijkplayer/ijkplayer-cmake/src/main/cpp/: CMakeLists.txt  third-libs
android/ijkplayer/ijkplayer-cmake/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
android/ijkplayer/ijkplayer-example/: build.gradle
android/ijkplayer/ijkplayer-example/src/main/: AndroidManifest.xml
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java  SettingsActivity.java  VideoActivity.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/application/: AppActivity.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/fragments/: FileListFragment.java  RecentMediaListFragment.java  SampleMediaListFragment.java  TracksFragment.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/media/: AndroidMediaController.java  IRenderView.java  IjkVideoView.java  SurfaceRenderView.java  TableLayoutBinder.java
ijkmedia/: mystreamprobe.py  notes.md
ijkmedia/ijkj4a/j4a/: j4a_allclasses.c  j4a_allclasses.h
ijkmedia/ijkplayer/: ff_ffpipeline.h  ff_ffplay.c  ff_ffplay_def.h  ff_ffplay_options.h  ijkplayer.c
ijkmedia/ijkplayer/android/: ijkplayer_jni.c
ijkmedia/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipenode_android_mediacodec_vdec.c
ijkmedia/ijkplayer/ijkavformat/: ijkiourlhook.c  ijklivehook.c  ijklongurl.c
ijkmedia/ijkplayer/ijkavutil/: ijkdict.c
ijkmedia/ijkplayer/pipeline/: ffpipeline_ffplay.c  ffpipenode_ffplay_vdec.c
ijkmedia/ijksdl/: ijksdl_egl.c  ijksdl_vout.h
ijkmedia/ijksdl/android/: ijksdl_android_jni.c  ijksdl_android_jni.h  ijksdl_aout_android_audiotrack.c  ijksdl_aout_android_opensles.c  ijksdl_codec_android_mediacodec.h  ijksdl_vout_android_nativewindow.c
ijkmedia/ijksoundtouch/: ijksoundtouch_wrap.cpp
ios/: build-framework.sh  install-ffmpeg.sh
ios/IJKMediaDemo/IJKMediaDemo/: IJKMediaDemo-Info.plist  IJKMoviePlayerViewController.xib  IJKQRCodeScanViewController.xib
ios/IJKMediaDemo/IJKMediaDemo.xcodeproj/: project.pbxproj
ios/IJKMediaPlayer/IJKMediaPlayer/: IJKAudioKit.m
ios/IJKMediaPlayer/IJKMediaPlayer.xcodeproj/: project.pbxproj
ios/xcframewrok/: make-podspec.sh  make-xcframework.sh  template.spec.json
